# garagem-vini

./: db.sqlite3  pyproject.toml
config/: settings.py  urls.py
garagem/: admin.py  models.py  serializers.py  views.py
garagem/migrations/: 0001_initial.py  0002_categoria.py  0002_veiculo_foto.py  0003_acessório_cor_veículo.py  0003_remove_veiculo_foto_veiculo_foto.py  0004_alter_veiculo_foto.py  0004_veículo_modelo.py  0005_alter_cor_options.py  0006_rename_acessório_acessorio_rename_veículo_veiculo_and_more.py  0007_rename_acessorio_acessorios_alter_categoria_options_and_more.py  0008_rename_acessorios_acessorio_alter_categoria_options_and_more.py  0009_alter_acessorio_options_alter_categoria_options_and_more.py  0010_alter_acessorio_options_alter_categoria_options_and_more.py  0011_remove_veiculo_categoria_remove_veiculo_marca_modelo_and_more.py  0012_alter_modelo_options_alter_modelo_categoria_and_more.py  0013_veiculo_descricao.py  0014_veiculo_acessorio.py
garagem/models/: __init__.py  acessorio.py  categoria.py  cor.py  marca.py  modelo.py  veiculo.py
garagem/serializers/: __init__.py  acessorio.py  categoria.py  cor.py  marca.py  modelo.py  veiculo.py
garagem/views/: __init__.py  acessorio.py  categoria.py  cor.py  marca.py  modelo.py  veiculo.py
uploader/migrations/: 0001_initial.py
usuario/migrations/: 0001_initial.py
