[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Vinícius Henriqueda Silva", email = "viniciushsilva2210@gmail.com"},
]
dependencies = [
    "django>=4.2.4",
    "djangorestframework>=3.14.0",
    "setuptools>=68.1.0",
    "python-magic>=0.4.27",
    "Pillow>=10.0.0",
]
requires-python = ">=3.10"
license = {text = "MIT"}
